# memberlist-plumtree

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.githooks/: pre-commit  pre-push  setup.sh
.github/workflows/: ci.yml  fuzz.yml  release.yml
docs/: README.md  adaptive-features.md  architecture.md  background-tasks.md  configuration.md  getting-started.md  metrics.md  peer-topology.md  quic.md  sync-persistence.md
docs/operations/: README.md  deployment.md  monitoring.md  recovery.md  troubleshooting.md  tuning.md
examples/: chat.rs  pubsub.rs  web_chat.rs  web_chat_quic.rs
examples/static/: index.html  index_quic.html
examples/web_chat_common/: delegate.rs  handlers.rs  metrics.rs  mod.rs  router.rs  server.rs  state.rs  traits.rs  types.rs  utils.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse.rs  envelope_decode.rs  message_decode.rs  peer_state.rs
spec/: README.md  plumtree.cfg  plumtree.tla  plumtree_types.tla
src/: adaptive_batcher.rs  bridge.rs  chaos.rs  cleanup_tuner.rs  compression.rs  config.rs  error.rs  health.rs  integration.rs  lib.rs  metrics.rs  peer_health.rs  peer_scoring.rs  peer_state.rs  peer_state_test.rs  plumtree.rs  pooled_transport.rs  priority.rs  rate_limiter.rs  runner.rs  scheduler.rs  stack.rs  testing.rs  transport.rs
src/discovery/: memberlist.rs  mod.rs  noop.rs  static.rs  traits.rs
src/message/: cache.rs  id.rs  mod.rs  types.rs
src/storage/: memory.rs  mod.rs  sled_backend.rs
src/sync/: handler.rs  memberlist_strategy.rs  merkle.rs  mod.rs  noop_strategy.rs  plumtree_strategy.rs  strategy.rs
src/transport/: mod.rs
src/transport/quic/: config.rs  connection.rs  error.rs  mod.rs  resolver.rs  session_cache.rs  tls.rs  transport.rs
tests/: bridge_e2e_test.rs  bridge_integration_test.rs  chaos_test.rs  memberlist_stack_storage_test.rs  memberlist_strategy_test.rs  peer_limits_e2e.rs  phase1_features_e2e.rs  plumtree_integration.rs  plumtree_memberlist_high_performance.rs  plumtree_stack_common.rs  plumtree_stack_e2e.rs  protocol_validation.rs  protocol_validation_enhanced.rs  public_api_test.rs  quic_0rtt_test.rs  quic_bidirectional_test.rs  quic_datagram_test.rs  quic_migration_test.rs  quic_mtls_test.rs  quic_transport.rs  sync_e2e_test.rs  sync_storage_e2e.rs
tests/chaos/: cascading_failure.rs  clock_skew.rs  harness.rs  message_reorder.rs  mod.rs  split_brain.rs
tests/common/: mod.rs
