[package]
name = "memberlist-plumtree"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johnnywale/memberlist-plumtree"
readme = "README.md"
categories = ["network-programming", "asynchronous", "data-structures"]
keywords = ["plumtree", "gossip", "broadcast", "epidemic"]

description = "Plumtree (Epidemic Broadcast Trees) implementation built on memberlist for efficient O(n) message broadcast."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tokio = ["agnostic-io/tokio", "memberlist-core/tokio"]
metrics = ["dep:metrics"]
serde = ["dep:serde"]

[dependencies]

memberlist-core = "0.7.0"
tracing = "0.1"

auto_impl = "1"
agnostic-io = { version = "0.2", default-features = false }
async-lock = "3"
async-channel = "2"
bytes = { version = "1", default-features = false }
futures = "0.3"
metrics = { version = "0.24", optional = true }
serde = { version = "1", optional = true }
nodecraft = { version = "0.8", features = ["default", "async", "agnostic", "resolver"] }
parking_lot = { version = "0.12", features = ["send_guard"] }


# Optional

# Lock-free data structures
crossbeam-queue = "0.3"


# Runtime-agnostic timer
futures-timer = "3"
smallvec = "1.15.1"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "pubsub"
path = "examples/pubsub.rs"


[lints.rust]
rust_2018_idioms = "warn"
