[package]
name = "memberlist-plumtree"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johnnywale/memberlist-plumtree"
readme = "README.md"
categories = ["network-programming", "asynchronous", "data-structures"]
keywords = ["plumtree", "gossip", "broadcast", "epidemic"]

description = "Plumtree (Epidemic Broadcast Trees) implementation built on memberlist for efficient O(n) message broadcast."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["tokio", "metrics", "serde", "quic", "memberlist"]
# Memberlist integration (optional - disable for standalone QUIC-only mode)
memberlist = ["dep:memberlist-core"]
tokio = ["agnostic-io/tokio", "memberlist-core?/tokio", "dep:tokio"]
metrics = ["dep:metrics"]
serde = ["dep:serde"]
quic = ["dep:quinn", "dep:rustls", "dep:rcgen", "dep:webpki-roots", "dep:thiserror", "dep:tokio", "dep:lru", "dep:x509-parser"]
# Sync and storage features
sync = ["sha2"]
storage = []
storage-sled = ["storage", "sled", "bincode"]
# Phase 1 features
compression = ["dep:flate2", "dep:zstd"]

[dependencies]

# Memberlist integration (optional)
memberlist-core = { version = "0.7.0", optional = true }
tracing = "0.1"

auto_impl = "1"
agnostic-io = { version = "0.2", default-features = false }
async-lock = "3"
async-channel = "2"
bytes = { version = "1", default-features = false }
futures = "0.3"
metrics = { version = "0.24", optional = true }
serde = { version = "1", optional = true }
nodecraft = { version = "0.8", features = ["default", "async", "agnostic", "resolver"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
siphasher = "1"


# Optional

# Lock-free data structures
crossbeam-queue = "0.3"

# QUIC transport (optional)
quinn = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.14", optional = true }
webpki-roots = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
# Tokio is used directly for QUIC transport (spawn_blocking, background tasks, select)
tokio = { version = "1", optional = true, default-features = false, features = ["rt", "time", "sync", "macros"] }
# LRU cache for 0-RTT session ticket caching
lru = { version = "0.12", optional = true }
# X.509 certificate parsing for peer ID extraction
x509-parser = { version = "0.17", optional = true }

# Sync and storage dependencies
sha2 = { version = "0.10", optional = true }
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }

# Compression dependencies (Phase 1)
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.13", optional = true }


# Runtime-agnostic timer
futures-timer = "3"
smallvec = "1.15.1"
rand = "0.9.2"
stable-hash = "0.4.3"

[dev-dependencies]
# For tests, use full features but the same version as the optional dep
tokio = { version = "1", features = ["full", "rt", "time", "sync"] }
crossterm = "0.29"
tempfile = "3"
once_cell = "1"

# Web dependencies for web-chat example
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde_json = "1"

# Prometheus metrics exporter for web-chat example
metrics-exporter-prometheus = "0.16"

# E2E testing with real memberlist
memberlist = { version = "0.7", features = ["tcp", "tokio"] }
smol_str = "0.2"
generic-array = "1"
typenum = "1"


[[example]]
name = "pubsub"
path = "examples/pubsub.rs"

[[example]]
name = "web-chat"
path = "examples/web_chat.rs"
required-features = ["tokio", "sync", "metrics"]

[[example]]
name = "web-chat-quic"
path = "examples/web_chat_quic.rs"
required-features = ["tokio", "quic", "metrics"]

[lints.rust]
rust_2018_idioms = "warn"
