[package]
name = "memberlist-plumtree-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
memberlist-plumtree = { path = "..", default-features = false }
bytes = "1"

# Fuzz targets

[[bin]]
name = "message_decode"
path = "fuzz_targets/message_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "envelope_decode"
path = "fuzz_targets/envelope_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "peer_state"
path = "fuzz_targets/peer_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false
